--- a/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworkResOverlayVayu/res/values/config.xml
@@ -782,4 +782,13 @@
 
     <!-- If true, the screen can be rotated via the accelerometer in all 4 rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
+
+    <!-- User activity timeout: Minimum screen off timeout in milliseconds.
+         Sets a lower bound for the {@link Settings.System#SCREEN_OFF_TIMEOUT} setting
+         which determines how soon the device will go to sleep when there is no
+         user activity.
+         This value must be greater than zero, otherwise the device will immediately
+         fall asleep again as soon as it is awoken.
+    -->
+    <integer name="config_minimumScreenOffTimeout">7000</integer>
 </resources>
