--- a/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
@@ -646,13 +646,16 @@
 
     <!-- Do the battery/notification LEDs support pulsing?
          Used to decide if we show pulse settings -->
-    <bool name="config_ledCanPulse">false</bool>
+    <bool name="config_ledCanPulse">true</bool>
+
+    <!-- Does the device have a notification LED -->
+    <bool name="config_hasNotificationLed">true</bool>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveNotificationLed">false</bool>
-    
+    <bool name="config_intrusiveNotificationLed">true</bool>
+
     <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">false</bool>
+    <bool name="config_intrusiveBatteryLed">true</bool>
 
     <!-- Does the battery LED support multiple colors?
          Used to decide if the user can change the colors -->
