--- a/rro_overlays/SettingsProviderOverlayVayu/res/values/defaults.xml
+++ b/rro_overlays/SettingsProviderOverlayVayu/res/values/defaults.xml
@@ -29,4 +29,6 @@
     <!-- 30 seconds for default screen timeout -->
     <integer name="def_screen_off_timeout">30000</integer>
 
+    <!-- Disable Bluetooth by default -->
+    <bool name="def_bluetooth_on">false</bool>
 </resources>
