vayu: overlay: Add CPU Temperature Overlay
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>
Change-Id: I0caad7987db43ebbea6eb133db971212c2083088

--- a/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
@@ -34,4 +34,7 @@
 
     <!-- For how long the lock screen can be on before the display turns off. -->
     <integer name="config_lockScreenDisplayTimeout">7000</integer>
+    
+    <!-- The CPU temperature sensor path, defaults to empty -->
+    <string name="config_cpuTempSensor" translatable="false">/sys/devices/virtual/thermal/thermal_zone0/temp</string>
 </resources>
