vayu: overlay: Add CPU Info overlay
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
@@ -25,4 +25,7 @@
 
     <!-- Show the network traffic monitor on statusbar even if the device has a notch -->
     <bool name="config_forceShowNetworkTrafficOnStatusBar">true</bool>
+
+    <!-- The CPU temperature divider, if needed -->
+    <integer name="config_cpuTempDivider" translatable="false">1000</integer>
 </resources>
