vayu: overlay: Enable support for Bluetooth hearing Aids
This device is fully capable of streaming audio to Bluetooth hearing
aids using the ASHA GATT protocol built on top of L2CAP, similar to
A2DP.

Enable the config option for the system to handle pairs of hearing aids
properly and expose the option in Settings.

More info at https://source.android.com/devices/bluetooth/asha

Test: user reported successful audio streaming
Signed-off-by: Joey Huab <joey@evolution-x.org>
Change-Id: Ibdece6513a822ce7e221067dd0fa40da10b5b44d

--- a/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
@@ -797,4 +797,7 @@
         <item>"com.vanced.android.youtube"</item>
         <item>"com.vanced.android.apps.youtube.music"</item>
     </string-array>
+
+    <!-- Whether Hearing Aid profile is supported -->
+    <bool name="config_hearing_aid_profile_supported">true</bool>
 </resources>
