--- a/rro_overlays/SystemUIOverlayVayu/res/values/dimens.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/dimens.xml
@@ -37,4 +37,8 @@
 
     <!-- Rounded corner content padding -->
     <dimen name="rounded_corner_content_padding">8dp</dimen>
+
+    <!-- Set fingerprint and power button vertical position -->
+    <dimen name="physical_power_button_center_screen_location_y">1020px</dimen>
+    <dimen name="physical_fingerprint_sensor_center_screen_location_y">1020px</dimen>
 </resources>
