--- a/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
@@ -40,4 +40,8 @@
 
     <!-- Control whether status bar should distinguish HSPA data icon from UMTS data icon on devices -->
     <bool name="config_hspa_data_distinguishable">true</bool>
+
+    <!-- The battery current divider, some kernel report current value in mA other in µA.
+         Leave 1 if you have mA, put 1000 if you have µA-->
+    <integer name="config_battCurrentDivider" translatable="false">1000</integer>
 </resources>
