--- a/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
@@ -264,7 +264,7 @@
         <item>@null</item>
     </array>
 
-   <!-- Array of hysteresis constraint values for darkening, represented as tenths of a
+    <!-- Array of hysteresis constraint values for darkening, represented as tenths of a
          percent. The length of this array is assumed to be one greater than
          config_screenThresholdLevels. The darkening threshold is calculated as
          screenBrightness * (1.0f - CONSTRAINT_VALUE). When the new screen brightness is lower than
@@ -301,10 +301,10 @@
     <integer name="config_autoBrightnessBrighteningLightDebounce">2000</integer>
     <integer name="config_autoBrightnessDarkeningLightDebounce">4000</integer>
 
-    <!-- Fast brightness animation ramp rate in brightness units per second-->
+    <!-- Fast brightness animation ramp rate in brightness units per second -->
     <integer name="config_brightness_ramp_rate_fast">308</integer>
 
-    <!-- Slow brightness animation ramp rate in brightness units per second-->
+    <!-- Slow brightness animation ramp rate in brightness units per second -->
     <integer name="config_brightness_ramp_rate_slow">246</integer>
 
     <!-- Minimum screen brightness setting allowed by power manager.
@@ -313,7 +313,7 @@
     <item name="config_screenBrightnessSettingMinimumFloat" format="float" type="dimen">0.00392156862</item>
 
     <!-- Maximum screen brightness allowed by the power manager.
-         The user is forbidden from setting the brightness above this level.  -->
+         The user is forbidden from setting the brightness above this level. -->
     <item name="config_screenBrightnessSettingMaximumFloat" format="float" type="dimen">1.0</item>
 
     <!-- Default screen brightness setting
@@ -376,8 +376,7 @@
            remote submix module.  This module is used to record and stream system
            audio output to the WiFi display encoder in the media server.
          * The remote submix module "audio.r_submix.default" must be installed on the device.
-         * The device must be provisioned with HDCP keys (for protected content).
-    -->
+         * The device must be provisioned with HDCP keys (for protected content). -->
     <bool name="config_enableWifiDisplay">true</bool>
 
     <!-- Set to true if the wifi display supports compositing content stored
@@ -388,11 +387,10 @@
          buffers (if possible) when presenting content to a wifi display because
          the content may be blanked.
          This flag controls whether the {@link Display#FLAG_SUPPORTS_PROTECTED_BUFFERS}
-         flag is set for wifi displays.
-    -->
+         flag is set for wifi displays. -->
     <bool name="config_wifiDisplaySupportsProtectedBuffers">false</bool>
 
-   <!-- The bounding path of the cutout region of the main built-in display.
+    <!-- The bounding path of the cutout region of the main built-in display.
          Must either be empty if there is no cutout region, or a string that is parsable by
          {@link android.util.PathParser}.
          The path is assumed to be specified in display coordinates with pixel units and in
@@ -400,8 +398,7 @@
          center top of the display.
          To facilitate writing device-independent emulation overlays, the marker `@dp` can be
          appended after the path string to interpret coordinates in dp instead of px units.
-         Note that a physical cutout should be configured in pixels for the best results.
-         -->
+         Note that a physical cutout should be configured in pixels for the best results. -->
     <string name="config_mainBuiltInDisplayCutout">M 0,0 H -36 V 91 H 36 V 0 H 0 Z</string>
 
     <!-- The default refresh rate for a given device. Change this value to set a higher default
@@ -440,15 +437,12 @@
          and one pSIM) -->
     <integer name="config_num_physical_slots">2</integer>
 
-    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveNotificationLed">true</bool>
-
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
          autodetected from the Configuration. -->
     <bool name="config_showNavigationBar">true</bool>
 
     <!-- Boolean indicating if restoring network selection should be skipped -->
-    <!-- The restoring is handled by modem if it is true-->
+    <!-- The restoring is handled by modem if it is true -->
     <bool name="skip_restoring_network_selection">true</bool>
 
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
@@ -460,7 +454,7 @@
     <!-- MMS user agent prolfile url -->
     <string name="config_mms_user_agent_profile_url">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
 
-     <!-- This string array should be overridden by the device to present a list of network
+    <!-- This string array should be overridden by the device to present a list of network
          attributes.  This is used by the connectivity manager to decide which networks can coexist
          based on the hardware -->
     <!-- An Array of "[Connection name],[ConnectivityManager.TYPE_xxxx],
@@ -486,8 +480,7 @@
 
     <!-- Configure mobile tcp buffer sizes in the form:
          rat-name:rmem_min,rmem_def,rmem_max,wmem_min,wmem_def,wmem_max
-         If no value is found for the rat-name in use, the system default will be applied.
-    -->
+         If no value is found for the rat-name in use, the system default will be applied. -->
     <string-array name="config_mobile_tcp_buffers">
         <item>5gnr:2097152,6291456,16777216,512000,2097152,8388608</item>
         <item>lte:2097152,4194304,8388608,262144,524288,1048576</item>
@@ -544,8 +537,7 @@
          This resource should be set to "true" when a doze component has been specified
          to maximize power savings but not all devices support it.
 
-         Refer to power.h for details.
-    -->
+         Refer to power.h for details. -->
     <bool name="config_powerDecoupleInteractiveModeFromDisplay">false</bool>
 
     <!-- Power Management: Specifies whether to decouple the auto-suspend state of the
@@ -564,8 +556,7 @@
          This resource should be set to "true" when a doze component has been specified
          to maximize power savings but not all devices support it.
 
-         Refer to autosuspend.h for details.
-    -->
+         Refer to autosuspend.h for details. -->
     <bool name="config_powerDecoupleAutoSuspendModeFromDisplay">true</bool>
 
     <!-- Indicate whether to allow the device to suspend when the screen is off
@@ -613,19 +604,19 @@
     <!-- Whether the Unprocessed audio source supports the required frequency range and level -->
     <bool name="config_supportAudioSourceUnprocessed">true</bool>
 
-    <!-- Idle current for bluetooth controller. 0 by default-->
+    <!-- Idle current for bluetooth controller. 0 by default -->
     <integer name="config_bluetooth_idle_cur_ma">3</integer>
 
-    <!-- Rx current for bluetooth controller. 0 by default-->
+    <!-- Rx current for bluetooth controller. 0 by default -->
     <integer name="config_bluetooth_rx_cur_ma">20</integer>
 
-    <!-- Tx current for bluetooth controller. 0 by default-->
+    <!-- Tx current for bluetooth controller. 0 by default -->
     <integer name="config_bluetooth_tx_cur_ma">33</integer>
 
-    <!-- Operating voltage for bluetooth controller. 0 by default-->
+    <!-- Operating voltage for bluetooth controller. 0 by default -->
     <integer name="config_bluetooth_operating_voltage_mv">3700</integer>
 
-    <!-- True if the device supports Sustained Performance Mode-->
+    <!-- True if the device supports Sustained Performance Mode -->
     <bool name="config_sustainedPerformanceModeSupported">true</bool>
 
     <!-- Enables or disables haptic effect when the text insertion/selection handle is moved
@@ -642,8 +633,8 @@
 
     <!-- List supported color modes. -->
     <integer-array name="config_availableColorModes">
-        <item>0</item> <!-- COLOR_MODE_NATURAL -->
-        <item>1</item> <!-- COLOR_MODE_BOOSTED -->
+        <item>0</item> <!-- COLOR_MODE_NATURAL   -->
+        <item>1</item> <!-- COLOR_MODE_BOOSTED   -->
         <item>2</item> <!-- COLOR_MODE_SATURATED -->
     </integer-array>
 
@@ -662,28 +653,31 @@
          COLOR_MODE_SRGB) override system selection; these other color spaces must be supported by
          the device for for display composition.
          If a color mode does not have a corresponding color space specified in this array, the
-         currently set composition color space will not be modified.-->
+         currently set composition color space will not be modified. -->
     <integer-array name="config_displayCompositionColorModes">
         <item>0</item> <!-- COLOR_MODE_NATURAL   -->
         <item>1</item> <!-- COLOR_MODE_BOOSTED   -->
         <item>2</item> <!-- COLOR_MODE_SATURATED -->
     </integer-array>
     <integer-array name="config_displayCompositionColorSpaces">
-        <item>0</item> <!-- COLOR_MODE_DEFAULT    -->
-        <item>0</item> <!-- COLOR_MODE_DEFAULT    -->
-        <item>0</item> <!-- COLOR_MODE_DEFAULT    -->
+        <item>0</item> <!-- COLOR_MODE_DEFAULT   -->
+        <item>0</item> <!-- COLOR_MODE_DEFAULT   -->
+        <item>0</item> <!-- COLOR_MODE_DEFAULT   -->
     </integer-array>
 
-   <!-- Do the battery/notification LEDs support pulsing?
+    <!-- Do the battery/notification LEDs support pulsing?
          Used to decide if we show pulse settings -->
-   <bool name="config_ledCanPulse">true</bool>
+    <bool name="config_ledCanPulse">false</bool>
 
-   <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-   <bool name="config_intrusiveBatteryLed">true</bool>
+    <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
+    <bool name="config_intrusiveNotificationLed">false</bool>
+    
+    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
+    <bool name="config_intrusiveBatteryLed">false</bool>
 
-   <!-- Does the battery LED support multiple colors?
+    <!-- Does the battery LED support multiple colors?
          Used to decide if the user can change the colors -->
-   <bool name="config_multiColorBatteryLed">false</bool>
+    <bool name="config_multiColorBatteryLed">false</bool>
 
     <!-- The default journal mode to use use when Write-Ahead Logging is not active.
          Choices are: OFF, DELETE, TRUNCATE, PERSIST and MEMORY.
@@ -742,10 +736,12 @@
          Settings.System.HAPTIC_FEEDBACK_INTENSITY more details on the constant values and
          meanings. -->
     <integer name="config_defaultHapticFeedbackIntensity">3</integer>
+
     <!-- The default intensity level for notification vibrations. See
          Settings.System.NOTIFICATION_VIBRATION_INTENSITY more details on the constant values and
          meanings. -->
     <integer name="config_defaultNotificationVibrationIntensity">3</integer>
+
     <!-- The default intensity level for notification vibrations. See
          Settings.System.RING_VIBRATION_INTENSITY more details on the constant values and
          meanings. -->
@@ -767,7 +763,7 @@
     <bool name="config_unplugTurnsOnScreen">true</bool>
 
     <!-- Default value for proximity check on screen wake
-     NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)-->
+     NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms) -->
     <bool name="config_proximityCheckOnWake">true</bool>
     <integer name="config_proximityCheckTimeout">3000</integer>
     <bool name="config_proximityCheckOnWakeEnabledByDefault">false</bool>
@@ -775,11 +771,6 @@
     <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
     <bool name="config_zramWriteback">true</bool>
     
-    <!-- Charge sysfs node and value for Adaptive charging -->
-    <string name="config_adaptiveChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
-    <string name="config_adaptiveChargingSuspendValue" translatable="false">1</string>
-    <string name="config_adaptiveChargingResumeValue" translatable="false">0</string>
-
     <!-- If true, the screen can be rotated via the accelerometer in all 4 rotations as the default behavior. -->
     <bool name="config_allowAllRotations">true</bool>
 
@@ -788,13 +779,9 @@
          which determines how soon the device will go to sleep when there is no
          user activity.
          This value must be greater than zero, otherwise the device will immediately
-         fall asleep again as soon as it is awoken.
-    -->
+         fall asleep again as soon as it is awoken. -->
     <integer name="config_minimumScreenOffTimeout">7000</integer>
 
-    <!-- Whether device supports an gaming mode profiles -->
-    <bool name="config_gamingmode_performance">true</bool>
-    
     <!-- Flag indicating whether the surface flinger has limited
          alpha compositing functionality in hardware.  If set, the window
          manager will disable alpha trasformation in animations where not
