--- a/rro_overlays/NotchBarKillerVayu/res/values/config.xml
+++ b/rro_overlays/NotchBarKillerVayu/res/values/config.xml
@@ -17,8 +17,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Whether the display cutout region of the main built-in display should be forced to
-         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
-     -->
+         black in software (to avoid aliasing or emulate a cutout that is not physically existent). -->
     <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
 
     <string translatable="false" name="config_mainBuiltInDisplayCutout">M 0,0 L 0, 0 C 0,0 0,0 0,0</string>
