--- a/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayVayu/res/values/config.xml
@@ -37,4 +37,7 @@
     
     <!-- The CPU temperature sensor path, defaults to empty -->
     <string name="config_cpuTempSensor" translatable="false">/sys/devices/virtual/thermal/thermal_zone0/temp</string>
+
+    <!-- Control whether status bar should distinguish HSPA data icon from UMTS data icon on devices -->
+    <bool name="config_hspa_data_distinguishable">true</bool>
 </resources>
