vayu: overlay: Limit Netflix and YouTube to 60Hz only
To avoid delaying scroll on Netflix and YouTube while watching video at 1080p and 120Hz, let's opted it out from using refresh rate higher than 60Hz

Reference: https://github.com/ArrowOS-Devices/android_device_xiaomi_vayu/commit/1362793fc5c5a441bb218b7edcfb8a51a1378296

test:
Play a Netflix or YouTube video to see it is opt out of refresh rates higher than 60Hz.

Signed-off-by: InVictusXV <aradheakiki123@gmail.com>

--- a/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayVayu/res/values/config.xml
@@ -787,4 +787,14 @@
          user-set value if toggled by settings so the "Transition animation scale" setting
          should also be hidden if intended to be permanent. -->
     <item name="config_appTransitionAnimationDurationScaleDefault" format="float" type="dimen">0.8</item>
+
+    <!-- The list of packages to automatically opt out of refresh rates higher than 60hz because
+         of known compatibility issues. -->
+    <string-array name="config_highRefreshRateBlacklist">
+        <item>"com.netflix.mediaclient"</item>
+        <item>"com.google.android.youtube"</item>
+        <item>"com.google.android.apps.youtube.music"</item>
+        <item>"com.vanced.android.youtube"</item>
+        <item>"com.vanced.android.apps.youtube.music"</item>
+    </string-array>
 </resources>
